name:               Probability
version:            0.1.0
synopsis:           A reasonably efficient probability library
homepage:           http://github.com
category:           Mathematics
author:             Chris Taylor
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.10
build-type:         Simple
category:           Mathematics

Library
    Default-Language:   Haskell2010
    Default-Extensions: 
    Other-Extensions:   GADTs, StandaloneDeriving
    Hs-Source-Dirs:     src
    GHC-Options:        -O2
    GHC-Prof-Options:   -O2 -auto-all
    Build-Depends:      base >= 2,
                        containers,
                        heap,
                        random,
                        MonadRandom
    exposed-modules:    Control.Probability
                        Control.Probability.Types
                    --  Control.Probability.Internal
                    --  Control.Probability.Monad
                        Control.Probability.MonadBayes
                        Control.Probability.Bayes
                        Control.Probability.Dist
                        Control.Probability.Tree
                        Control.Probability.Ordering
                        Control.Probability.PrettyPrint
                    --  Control.Probability.Random
                        Control.Probability.MonteCarlo
